[project]
name = "automata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "duckdb>=1.3.2",
    "dyplot>=0.8.8",
    "hvplot>=0.12.0",
    "jupyter>=1.1.1",
    "kagglehub>=0.3.12",
    "matplotlib>=3.10.5",
    "nbformat>=5.10.4",
    "pandas>=2.3.1",
    "pandas-profiling>=3.6.6",
    "plotly>=6.2.0",
    "plotnine>=0.15.0",
    "polars>=1.32.0",
    "prophet>=1.1.7",
    "pulp>=3.2.2",
    "pyarrow>=21.0.0",
    "pyspark>=4.0.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
]
